Revert "Fix horizontal and vertical scrollbars appearing on home page (Fixes #14)"

--- a/style.css
+++ b/style.css
@@ -101,8 +101,7 @@ body {
 .footer {
   font-size: 0.9rem;
   text-align: center;
-  color: white;
-  padding: 20px 0;
+  padding: 20px;
   width: 100%;
 }
 
